refactor based on code analysis